# rickshaw

rickshaw_description/: CMakeLists.txt  package.xml
rickshaw_description/launch/: debug_node_scripts.launch
rickshaw_description/src/: rickshaw_gait_fsm_node.py  rickshaw_movement_fsm_node.py  rickshaw_two_dof_leg_fsm_node.py
rickshaw_description/src/rickshaw_gait_states/: gait.py  transition.py
rickshaw_description/src/rickshaw_movement_states/: get_gait_params.py  get_move_direction.py  send_leg_cmd.py
rickshaw_description/src/rickshaw_two_dof_leg_states/: execute_joint_trajectory.py  generate_joint_trajectory.py  get_master_cmd.py
rickshaw_description/src/scratch/: update_userdata_from_old_state.py
rickshaw_description/urdf/: rickshaw_01_a_rough.urdf  rickshaw_02_a_fixed.urdf  rickshaw_02_b_free.urdf  rickshaw_02_c_noplugins.urdf
rickshaw_gazebo/: CMakeLists.txt  package.xml
rickshaw_gazebo/launch/: rickshaw_01_a_spawn_model.launch  rickshaw_02_a_debug_node_scripts.launch  rickshaw_02_a_spawn_fixed_model.launch  rickshaw_02_b_test_movement_on_gnd.launch  rickshaw_02_c_test_noplugins.launch  rickshaw_03_a_gazebo_test_movement.launch  rickshaw_03_a_ros_test_movement.launch
